Spanish etxt for log in and Home, Question page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -80,7 +80,6 @@
         }
     }
 }
-
 .navbar-toggle {
     margin-top: -29px;
     background: none;
@@ -89,6 +88,7 @@
 }
 
 .navbar-brand {
+    position:relative;
     color:black;
     height: 40px;
     padding: 0px 0px;
