--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="clearfix"></div>
         </li>
-        <li><div class="top-user-info"><a (click)="goToAllUser()">View all users</a></div></li>
+        <li><div class="top-user-info"><a (click)="goToAllUser()">Ver más<!--View all users--></a></div></li>
     </ul>
 </div>
 <popover-content #userInfoDetailsPopoveruser>
