--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -82,7 +82,7 @@
                 <ul id="profile-route" class="profile-leftmenu">
                     <li><a (click)="hideMenu()" class="route link-with-number" tabindex="0" id="question-route" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-question']" routerLinkActive="active-link">Questions<span>{{profileParam?.questions}}</span> </a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']" routerLinkActive="active-link">Answers<span>{{profileParam?.answers}}</span> </a></li>
-                    <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" routerLinkActive="active-link">Followers <span>{{profileParam?.followers}}</span></a></li>
+                    <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" routerLinkActive="active-link">Seguidores<!--Followers--> <span>{{profileParam?.followers}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']" routerLinkActive="active-link">Followings <span>{{profileParam?.followings}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']" routerLinkActive="active-link">Bookmarks <span>{{profileParam?.bookmarks}}</span></a></li>
                     <li><a (click)="hideMenu()" class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'posted-question']" routerLinkActive="active-link">Posted Question</a></li>
