--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/login-modal/login-modal.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/login-modal/login-modal.component.html
@@ -19,9 +19,9 @@
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
     <div class="dialog">
         <div class="login-dialog">
-            <h1>You are not Logged in</h1>
+            <h1>Inicia sesión<!--You are not Logged in--></h1>
             <a href="/signin" class="btn btn-primary btn-lg">Log in</a>
-            <a (click)="onClickedExit()" class="btn-lg btn btn-default ">Not now</a>
+            <a (click)="onClickedExit()" class="btn-lg btn btn-default ">Ahora no<!--Not now--></a>
         </div>
     </div>
 </div>
