--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -22,7 +22,7 @@
             </h3>
             <div class="article-details" (click)="answerDialogBoxIfNoAnswer(question)">
                 <div *ngIf="!(question.answerCount>0)">
-                    <button class="answer-button" (click)="answerDialogBox(question)">Answer</button>
+                    <button class="answer-button" (click)="answerDialogBox(question)">Responder<!--Answer--></button>
                 </div>
                 <div *ngIf="(question.answerCount>0)">
                     <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate" [isAnonymous]="question.bestAnswer?.isAnonymous"></user-info>
