--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
@@ -86,31 +86,29 @@
         <section>
 
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <div class="sign-up">Don't have an account?  <a href="/Account/Register">Sign up here</a></div>
+                <div class="sign-up">@*Don't have an account?*@ ¿Aún no estás registrado?  <a href="/Account/Register">@*Sign up here*@Regístrate aquí</a></div>
                 <h2 class="login-header">
-
-                    Log in
-
+                    @*Log in*@Iniciar sesión
                 </h2>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Email" placeholder="EMAIL ADDRESS" class="form-control" id="email"/>
+                        <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Password" placeholder="PASSWORD" class="form-control"/>
+                        <input asp-for="Password" placeholder="Contraseña" class="form-control"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                        <button type="submit" class="btn btn-default">@*Log in*@Iniciar sesión</button>
                     </div>
                 </div>
                 <p class="col-sm-offset-1">
-                    <a asp-action="ForgotPassword" class="forget-password">Forgot password?</a>
+                    <a asp-action="ForgotPassword" class="forget-password">@*Forgot password?*@¿Olvidaste la contraseña?</a>
                 </p>
             </form>
         </section>
