--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
@@ -54,7 +54,7 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" >
             <div class="modal-header">
-                <h3>Preview Images</h3>
+                <h3><!--Preview Images-->Imagen previa</h3>
                 <!--<p>Credentials also appear on answers you write.</p>-->
             </div>
             <div class="profile-modal-body">
@@ -67,10 +67,10 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-2">
-                            <input (click)="onUpdate()" type="text" class="btn btn-info" value="Update" />
+                            <input (click)="onUpdate()" type="text" class="btn btn-info" value="Actualizar" />
                         </div>
                         <div class="col-lg-2">
-                            <input type="text" (click)="onClickedExit()" class="btn btn-danger" value="Cancel" />
+                            <input type="text" (click)="onClickedExit()" class="btn btn-danger" value="Cancelar" />
                         </div>
 
                     </div>
