--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-category/profile-category.component.html
@@ -26,15 +26,14 @@
     }
 </style>
 <div class="statistic-panel">
-    <h3>Sabe sobre</h3>
+    <h3><!--category-->Etapas de mi negocio</h3>
     <ul class="profile-rightmenu" *ngFor="let categoryWiseAnswer of categoryWiseAnswers">
         <li>
             <img class="profile-cat-img" src="{{categoryWiseAnswer?.imageUrl}}" [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]" />
             <h3>
                 <a [routerLink]="['/question/home',categoryWiseAnswer?.categoryId]"> {{categoryWiseAnswer?.categoryName}}</a>
             </h3>
-            <div>{{categoryWiseAnswer?.answerCount}} answer</div>
+            <div>{{categoryWiseAnswer?.answerCount}} <!--answer-->Respuestas</div>
         </li>
-        <!--<li>{{categoryWiseAnswer?.categoryName}}</li>-->
     </ul>
 </div>
