--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -48,12 +48,12 @@
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
 
-                <h3>Education Information</h3>
+                <h3><!--Education Information-->Información de educación</h3>
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveEducation()" #educationForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">School Name*</label>
+                        <label class="control-label col-sm-4" for="email"><!--School Name-->Universidad o Colegio*</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="SchoolName" placeholder="Enter SchoolName" [(ngModel)]="education.schoolName" required name="SchoolName"
                                    #SchoolName="ngModel">
@@ -64,36 +64,19 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Concentration</label>
+                        <label class="control-label col-sm-4" for="pwd"><!--Concentration-->Concentración</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="SchoolDegreeName" placeholder="Enter Concentration" [(ngModel)]="education.concentration" [ngModelOptions]="{standalone: true}">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Secondary Concentration</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="Certification" placeholder="Enter Certification" [(ngModel)]="education.secondaryConcentration" [ngModelOptions]="{standalone: true}">
-                        </div>
-                    </div>
+                   
 
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Degree Type</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control" id="CertificationType" placeholder="Msc." [(ngModel)]="education.degreeType" [ngModelOptions]="{standalone: true}">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Graduation Year</label>
-                        <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="education.graduationYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000" />
-                        </div>
-                    </div>
 
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteEducation()">Delete</a>
-                        <a (click)="onClickedExit()">Cancel</a>
-                        <button type="submit" class="btn btn-success" [disabled]="!educationForm.form.valid">Save</button>
+                        <a (click)="DeleteEducation()"><!--Delete-->Borrar</a>
+                        <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
+                        <button type="submit" class="btn btn-success" [disabled]="!educationForm.form.valid"><!--Save-->Guardar</button>
                     </div>
                 </form>
             </div>
