--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -47,13 +47,13 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Employment Information</h3>
+                <h3><!--Employment Information-->Información de trabajo</h3>
                 <!--<p>Credentials also appear on answers you write.</p>-->
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="onEmploymentSubmit()" #employmentForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">Position* :</label>
+                        <label class="control-label col-sm-4" for="email"><!--Position-->Cargo* :</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="position" placeholder="Enter Position" [(ngModel)]="employment.position" required name="position"
                                    #position="ngModel">
@@ -64,39 +64,16 @@
                          </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Company Name:</label>
+                        <label class="control-label col-sm-4" for="pwd">Nombre empresa:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="CompanyName" placeholder="Enter CompanyName" [(ngModel)]="employment.companyName"  [ngModelOptions]="{standalone: true}">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">Start Year:</label>
-                        <div class="col-sm-8">
-                            <input type="number"  class="form-control" [(ngModel)]="employment.startDate" [ngModelOptions]="{standalone: true}" placeholder="eg.2000" min="1900" max="3000"/>
-                           
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">End Year:</label>
-                        <div class="col-sm-8">
-                            <input type="number" class="form-control" [(ngModel)]="employment.endDate" [ngModelOptions]="{standalone: true}" placeholder="eg.2017" min="1900" max="3000" />
-
-                          
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Currently Working</label>
-                        <div class="col-sm-8">
-                            <input type="checkbox" class="form-control  checkbox noshadow" [(ngModel)]="employment.isCurrentlyWorking"  [ngModelOptions]="{standalone: true}" />
-                        </div>
-
-                    </div>
-
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteEmployment()">Delete</a>
-                        <a (click)="onClickedExit()">Cancel</a>
-                        <button type="submit" class="btn btn-success" [disabled]="!employmentForm.form.valid">Save</button>
+                        <a (click)="DeleteEmployment()"><!--Delete-->Borrar</a>
+                        <a (click)="onClickedExit()"><!--Cancel--> Cancelar</a>
+                        <button type="submit" class="btn btn-success" [disabled]="!employmentForm.form.valid"><!--Save-->Guardar</button>
                     </div>
                 </form>
             </div>
