--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -47,47 +47,29 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Place Information</h3>
+                <h3>Ciudad</h3>
 
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="savePlace()" #placeForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">Location Name*:</label>
+                        <label class="control-label col-sm-4" for="email"><!--Location Name-->Información de lugar*:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="LocationName" placeholder="Enter LocationName" [(ngModel)]="place.locationName" required name="LocationName"
                                    #LocationName="ngModel">
                             <div [hidden]="LocationName.valid || LocationName.pristine"
                                  class="alert alert-danger">
-                                LocationName is required
+                                Location Name is required
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">StartYear:</label>
-                        <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="place.startYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd">EndYear:</label>
-                        <div class="col-sm-8">
-                            <input type="number" class="form-control" id="graduaionYear" placeholder="eg.2000" [(ngModel)]="place.endYear" [ngModelOptions]="{standalone: true}" min="1900" max="3000">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4">Currenty Living:</label>
-                        <div class="col-sm-8">
-                            <input type="checkbox" class="form-control checkbox noshadow" [(ngModel)]="place.isCurrentyLiving" [ngModelOptions]="{standalone: true}" />
-                        </div>
-
-                    </div>
+                  
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeletePlace()">Delete</a>
-                        <a (click)="onClickedExit()">Cancel</a>
-                        <button type="submit" class="btn btn-success" [disabled]="!placeForm.form.valid">Save</button>
+                        <a (click)="DeletePlace()"><!--Delete-->Borrar</a>
+                        <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
+                        <button type="submit" class="btn btn-success" [disabled]="!placeForm.form.valid"><!--Save-->Guardar</button>
                     </div>
                 </form>
             </div>
