--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/facebook.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/facebook.component.html
@@ -44,18 +44,18 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Save Facebook Account</h3>
+                <h3><!--Save Facebook Account-->Guardar cuenta de Facebook</h3>
 
             </div>
             <div class="profile-modal-body">
-                <i class="fa fa-user"></i><span>Edit</span>
+                <i class="fa fa-user"></i><span><!--Edit-->Editar </span>
                 <div>
                     <input type="text" [(ngModel)]="title" />
                 </div>
                 <div class="profile-modal-button-container">
-                    <a (click)="DeleteTitle()">Delete</a>
-                    <a (click)="onClickedExit()">Cancel</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveTitle()">Save</button>
+                    <a (click)="DeleteTitle()"><!--Delete-->Borrar</a>
+                    <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
+                    <button class="btn btn-sm btn-primary" (click)="saveTitle()"><!--Save-->Guardar</button>
                 </div>
             </div>
         </div>
