--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/linkedin.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/linkedin.component.html
@@ -44,7 +44,7 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Save Linkdin Account</h3>
+                <h3><!--Save Linkdin Account-->Guardar cuenta de Linkdin</h3>
 
             </div>
             <div class="profile-modal-body">
