email with answer responsive

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/Views/EmailFormat/AnswerEmailFormat.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/Views/EmailFormat/AnswerEmailFormat.html
@@ -21,7 +21,7 @@
                 <!--<img style="border-radius: 50%; height: 65px; vertical-align: middle;" src="#ImageUrl"> &nbsp;#AnswerUserName,&nbsp;#AnswerUserOccupation-->
                 <img style="border-radius: 50%;height: 65px;float: left;" src="#ImageUrl"> 
                 <div>
-                    <div style="display: inline-block;margin-top: 11px;padding-left: 15px;"> #AnswerUserName ,&nbsp;#AnswerUserOccupation</div>
+                    <div style="display: inline-block;margin-top: 11px;padding-left: 15px; width:85%;"> #AnswerUserName ,&nbsp;#AnswerUserOccupation</div>
                     <div style="padding-left: 78px;"> #date</div>
                 </div>
                 
