--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
@@ -10,8 +10,9 @@
 
 <style>
     .form-horizontal {
-            height: 231px;
-    }
+    border-radius: 10px;
+    /*height: 355px;*/
+}
 </style>
 <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
     <h4>Enter your email.</h4>
@@ -19,7 +20,7 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <div class="col-md-4 col-md-offset-3">
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
