akash:some bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -30,7 +30,7 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
-            <li><a routerLink="/question/home/1">Questions</a></li>
+            <li><a routerLink="/question/home/1"><!--Questions-->Preguntas</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <li><a href="/signin">Iniciar sesión <!--Log in--></a></li>
