--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -165,7 +165,7 @@
         </div>
     </div>
     <div class="col-md-9">
-        <div class="profile-info">
+        <div class="profile-info" *ngIf="credential">
             <!-- ===================User Name================== -->
             <div class="user-name">
                 <div id="userName" [hidden]="!isUserHidden">
