search double space issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -59,7 +59,7 @@
 </div>
 <div class="row profile-xs">
 
-    <div class="alert alert-danger center-width" *ngIf="isOwner">
+    <div class="alert alert-danger center-width" *ngIf="isOwner && credential">
        <span *ngIf="!credential.id">Please add first name and last name to start.</span> 
     </div>
     <div class="col-md-9">
