--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -106,6 +106,7 @@ a {
     border-bottom-left-radius: 10px;
     padding-left: 15px;
     padding-right:15px;
+    font-size:15px;
 }
 
 .form-group {
